no-request-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-request
  namespace: cloud-ide-ws
spec:
  containers:
  - name: test
    image: alpine:latest
    command: ["sleep", "300"]
    resources: {}
